k8s/security/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: hospital-ml
spec:
  podSelector: {}             # all pods in this namespace
  policyTypes:
    - Ingress
    - Egress
